--- a/app/src/main/res/drawable/rounded_card_background.xml
+++ b/app/src/main/res/drawable/rounded_card_background.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<shape xmlns:android="http://schemas.android.com/apk/res/android">-->
+<!--    <solid android:color="#A0AEC0" />-->
+<!--    <corners android:radius="50dp" />-->
+<!--</shape>-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFF00" /> <!-- Yellow background -->
-    <corners android:radius="50dp" /> <!-- Big radius for pill shape -->
+    <solid android:color="#F5F5F5"/>
+    <corners android:radius="16dp"/>
 </shape>
